--- a/src/style.scss
+++ b/src/style.scss
@@ -55,7 +55,7 @@ form{
 button, .input-doc {
   margin: 10px 0;
   width: 100%;
-
+  color:rgba(255, 255, 255, 0.87);
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -77,17 +77,4 @@ button:focus-visible,
 .input-doc:focus-visible
 {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
