Finalizando cadastro de livros

--- a/src/style.scss
+++ b/src/style.scss
@@ -78,3 +78,15 @@ button:focus-visible,
 {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+table, table tr th,{
+  border: 1px solid white;
+  tr{
+    th{
+      padding: 5px 20px 5px 20px;
+    }
+    td{
+      padding: 20px;
+    }
+  }
+}
