--- a/src/style.scss
+++ b/src/style.scss
@@ -79,7 +79,7 @@ button:focus-visible,
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-table, table tr th,{
+table, table tr th{
   border: 1px solid white;
   tr{
     th{
